# vedit

./: .gitignore  Cargo.toml  flake.nix  readme.md  test_search.txt  test_unicode.txt
.github/workflows/: ci.yml
crates/vedit-application/: Cargo.toml
crates/vedit-application/src/: app_state.rs  command_palette.rs  lib.rs  quick_commands.rs  settings.rs
crates/vedit-config/: Cargo.toml
crates/vedit-config/src/: lib.rs  sticky_notes.rs
crates/vedit-core/: Cargo.toml
crates/vedit-core/src/: document.rs  editor.rs  keybinds.rs  language.rs  lib.rs  sticky.rs  text_buffer.rs  workspace.rs
crates/vedit-debugger/: Cargo.toml
crates/vedit-debugger-gdb/: Cargo.toml
crates/vedit-debugger-gdb/src/: lib.rs
crates/vedit-debugger/src/: lib.rs
crates/vedit-document/: Cargo.toml
crates/vedit-document/src/: document.rs  indexing.rs  lib.rs  line_index.rs  mapped.rs  search.rs  viewport.rs
crates/vedit-gui/: Cargo.toml
crates/vedit-gui/src/: app.rs  commands.rs  console.rs  debugger.rs  editor_log.rs  keyboard.rs  lib.rs  message.rs  notifications.rs  quick_commands.rs  scaling.rs  session.rs  settings.rs  state.rs  style.rs  theme.json  view.rs
crates/vedit-gui/src/style/: button_style.rs  container_style.rs  text_input_style.rs
crates/vedit-gui/src/syntax/: mod.rs
crates/vedit-gui/src/utils/: pool.rs
crates/vedit-gui/src/views/: command_palette.rs  console_panel.rs  document_tabs.rs  editor_content.rs  mod.rs  notifications.rs  open_files.rs  scrollbar_style.rs  settings.rs  solutions.rs  status_bar.rs  title_bar.rs
crates/vedit-gui/src/widgets/: bottom_terminal.rs  command_palette.rs  context_menu.rs  debugger.rs  file_explorer.rs  fps_counter.rs  hover_tooltip.rs  left_rail.rs  mod.rs  right_rail.rs  search_dialog.rs  search_dialog.rs.backup  solution_context_menu.rs  text_editor.rs  toast.rs  top_toolbar.rs  wine.rs  wine_simple.rs
crates/vedit-keybinds/: Cargo.toml
crates/vedit-keybinds/src/: lib.rs
crates/vedit-make/: Cargo.toml
crates/vedit-make/src/: lib.rs
crates/vedit-symbols/: Cargo.toml
crates/vedit-symbols/src/: hover.rs  index.rs  lib.rs
crates/vedit-symbols/src/indexers/: makefile.rs  mod.rs  vs.rs
crates/vedit-syntax/: Cargo.toml
crates/vedit-syntax/src/: lib.rs
crates/vedit-text/: Cargo.toml
crates/vedit-text/src/: lib.rs
crates/vedit-vs/: Cargo.toml
crates/vedit-vs/src/: lib.rs
crates/vedit-wine/: Cargo.toml
crates/vedit-wine/src/: config.rs  debugging.rs  environment.rs  error.rs  gui_integration.rs  lib.rs  msbuild.rs  nix_integration.rs  prefix.rs  process.rs  proton.rs  remote_desktop.rs
crates/vedit-workspace/: Cargo.toml
crates/vedit-workspace/src/: lib.rs
src/: main.rs
tests/: unicode_test_file.txt
