[workspace]
members = [
    "crates/vedit-config",
    "crates/vedit-core",
    "crates/vedit-gui",
    "crates/vedit-application",
    "crates/vedit-vs",
    "crates/vedit-make",
    "crates/vedit-debugger-gdb",
]
resolver = "2"

[package]
name = "vedit"
version = "0.1.0"
edition = "2021"

[dependencies]
vedit-core = { path = "crates/vedit-core" }
vedit-gui = { path = "crates/vedit-gui" }
