[package]
name = "vedit-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
slab = "0.4"
vedit-config = { path = "../vedit-config" }
vedit-vs = { path = "../vedit-vs" }
vedit-make = { path = "../vedit-make" }
vedit-text = { path = "../vedit-text" }
vedit-workspace = { path = "../vedit-workspace" }
vedit-syntax = { path = "../vedit-syntax" }
vedit-keybinds = { path = "../vedit-keybinds" }
