[package]
name = "vedit-gui"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
iced = { version = "0.12", features = ["wgpu", "tokio", "lazy", "advanced"] }
iced_graphics = "0.12"
cosmic-text = "0.10"
rfd = "0.14"
crossbeam-channel = "0.5"
portable-pty = "0.8"
vedit-application = { path = "../vedit-application" }
vedit-core = { path = "../vedit-core" }
vedit-config = { path = "../vedit-config" }
vedit-make = { path = "../vedit-make" }
vedit-vs = { path = "../vedit-vs" }
vedit-debugger-gdb = { path = "../vedit-debugger-gdb" }
vedit-debugger = { path = "../vedit-debugger" }
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
