[package]
name = "vedit-gui"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio", "lazy", "advanced"] }
iced_graphics = "0.14"
iced_aw = "0.13"
iced_font_awesome = "0.4"
# Note: cosmic-text is re-exported from iced_graphics::text::cosmic_text
# We don't need a direct dependency
rfd = "0.17"
tokio = { version = "1", features = ["process"] }
crossbeam-channel = "0.5"
portable-pty = "0.9"
slab = "0.4"
dirs = "6.0"
which = "7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
vedit-application = { path = "../vedit-application" }
vedit-core = { path = "../vedit-core" }
vedit-config = { path = "../vedit-config" }
vedit-make = { path = "../vedit-make" }
vedit-vs = { path = "../vedit-vs" }
vedit-symbols = { path = "../vedit-symbols" }
vedit-debugger-gdb = { path = "../vedit-debugger-gdb" }
vedit-debugger = { path = "../vedit-debugger" }
vedit-document = { path = "../vedit-document" }
vedit-wine = { path = "../vedit-wine" }
uuid = { version = "1.0", features = ["v4"] }
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-lua = "0.4"
tree-sitter-nix = "0.3"
tree-sitter-md = "0.3"
tree-sitter-toml-ng = "0.7"
itoa = "1.0"
chrono = "0.4"
arboard = { version = "3", features = ["wayland-data-control"] }

[dev-dependencies]
tempfile = "3"
