[package]
name = "vedit-wine"
version = "0.1.0"
edition = "2021"
description = "Wine integration support for vedit editor"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"

# For NixOS integration
tempfile = "3.0"
which = "8.0"

# For directory handling
dirs = "5.0"

# For remote desktop/VNC
rand = "0.8"

# For test binary
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["nix-support"]
nix-support = []
vnc-support = []

[[bin]]
name = "vedit-wine-test"
path = "src/bin/test.rs"
required-features = ["tracing-subscriber"]